cart test done and unnecessary api removed
