# api/controllers/cart.js
@@ -13,7 +13,6 @@ module.exports = {
   getCartItems,
   addItemToCart,
   updateCartItems,
-  removeCartItem,
   removeCartproduct
 };
 
@@ -29,10 +28,7 @@ function getCartItems(req, res, next){
     }
     return res.status(200).json(responseObj);
   })
-  .catch((err)=>{
-    logger.error(err);
-    return next(createError(err.status || 500, err.message || 'Internal server errror'));
-  });
+  .catch((err)=>{ return next(createError(err.status || 500, err.message || 'Internal server errror')); });
 }
 
 
@@ -57,12 +53,12 @@ function addItemToCart(req, res, next){
   })
   .then(result=>query.getFromDB(collectionName, {customerId : req.body.customerId}, {_id:0}))
   .then((result)=>{ return res.status(200).json(_.merge(result[0], {total : _.sumBy(result[0].products, (eacheProduct)=>{ return eacheProduct.quantity * eacheProduct.unitPrice; })})); })
-  .catch((err)=>{ logger.error(err); return next(createError(err.status || 500, err.message || 'Internal server errror')); });
+  .catch((err)=>{ return next(createError(err.status || 500, err.message || 'Internal server errror')); });
 }
 
 function updateCartItems(req, res, next){
     let qs = {customerId : req.swagger.params.customerId.value};
-    let us = {$set : {products: req.body}};
+    let us = {$set : {products: _.map(req.body, (eacheProduct)=>{ return {_id : eacheProduct._id, quantity: eacheProduct.quantity, unitPrice: eacheProduct.unitPrice } ;})}};
     query.updateDB(collectionName, qs, us)
     .then((result)=>{
       if((result.result || {}).n > 0){
@@ -74,24 +70,7 @@ function updateCartItems(req, res, next){
       }
     })
     .then((result)=>{ return res.status(200).json(_.merge(result[0], {total : _.sumBy(result[0].products, (eacheProduct)=>{ return eacheProduct.quantity * eacheProduct.unitPrice; })})); })
-    .catch((err)=>{ logger.error(err); return next(createError(err.status || 500, err.message || 'Internal server errror')); });
-}
-
-function removeCartItem(req, res, next){
-  let qs =  {customerId : req.swagger.params.customerId.value, 'products._id' : req.swagger.params.productId.value};
-  let us = {$inc:{"products.$.quantity": -req.body.quantity }};
-  query.updateDB(collectionName, qs, us)
-  .then((result)=>{
-    if((result.result || {}).n > 0){
-      return query.getFromDB(collectionName, {customerId : req.swagger.params.customerId.value}, {_id:0});
-    }else if((result.result || {}).n ===0){
-      return promise.reject({status : 204, message: 'Content not found'});
-    }else{
-      return promise.reject({status : 500, message : 'Something wrong happend'});
-    }
-  })
-  .then((result)=>{ return res.status(200).json(_.merge(result[0], {total : _.sumBy(result[0].products, (eacheProduct)=>{ return eacheProduct.quantity * eacheProduct.unitPrice; })})); })
-  .catch((err)=>{ logger.error(err); return next(createError(err.status || 500, err.message || 'Internal server errror')); });
+    .catch((err)=>{ return next(createError(err.status || 500, err.message || 'Internal server errror')); });
 }
 
 
@@ -100,6 +79,7 @@ function removeCartproduct(req, res, next){
     let us = { $pull: { 'products': { _id: req.swagger.params.productId.value } } };
     query.updateDB(collectionName, qs, us)
     .then((result)=>{
+      console.log(result.result);
       if((result.result || {}).n > 0){
         return query.getFromDB(collectionName, qs, {_id:0});
       }else if((result.result || {}).n ===0){
@@ -109,5 +89,5 @@ function removeCartproduct(req, res, next){
       }
     })
     .then((result)=>{ return res.status(200).json(_.merge(result[0], {total : _.sumBy(result[0].products, (eacheProduct)=>{ return eacheProduct.quantity * eacheProduct.unitPrice; })})); })
-    .catch((err)=>{ logger.error(err); return next(createError(err.status || 500, err.message || 'Internal server errror')); });
+    .catch((err)=>{  return next(createError(err.status || 500, err.message || 'Internal server errror')); });
 }
