# api/swagger/swagger.yaml
@@ -439,7 +439,7 @@ paths:
           schema:
             # a pointer to a definition
             $ref: "#/definitions/ErrorResponse"
-  /cart/items:
+  /cart/product:
     # binds a127 app logic to a route
     x-swagger-router-controller: cart
     get:
@@ -507,7 +507,7 @@ paths:
             $ref: "#/definitions/AddProductToCartRequest"
       responses:
         "201":
-          description: Success, product successfully added to catalog
+          description: Success, product successfully added to cart
           schema:
             # a pointer to a definition
             $ref: "#/definitions/AddProductToCartResponse"
@@ -545,7 +545,7 @@ paths:
             # a pointer to a definition
             $ref: "#/definitions/ErrorResponse"
     put:
-      description: Add a item to the cart
+      description: Update item of the cart
       # used as the method name of the controller
       operationId: updateCartItems
       tags: ["cart"]
@@ -602,75 +602,7 @@ paths:
             # a pointer to a definition
             $ref: "#/definitions/ErrorResponse"
     delete:
-      description: Delete product from the product catalog
-      # used as the method name of the controller
-      operationId: removeCartItem
-      tags: ["cart"]
-      parameters:
-        - name: customerId
-          in: query
-          description: unique id of the customer
-          required: true
-          type: string
-        - name: productId
-          in: query
-          description: unique id of the product
-          required: true
-          type: string
-        - name: itemDetails
-          in: body
-          description: Details of the product to be added
-          required: true
-          schema:
-            required:
-              - quantity
-            properties:
-              quantity:
-                type: integer
-      responses:
-        "200":
-          description: Success, product removing successfull
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/GeneralResponse"
-        "204":
-          description: Content not found
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "400":
-          description: Bad Request, generally faulty
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "401":
-          description: Unauthorized, the requestor doesn't have permissions to see this
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "404":
-          description: Not found, Requested url does not exist
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "500":
-          description: Internal server error, in cases where there are more details e.g. in relation to order management new status codes should be added to this definition. e.g. 531 the operation is not allowed because of thing X.
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "501":
-          description: Not implemented
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "503":
-          description: Service that this api relies on is not available, this is the case where something goes wrong in the systems that CLM is trying to access
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        "default":
-          description: Undefined error situation, we have to add the properly defined error codes for this.
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/ErrorResponse"
-  /cart/product:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: cart
-    delete:
-      description: Delete product from the product catalog
+      description: Delete product from the cart
       # used as the method name of the controller
       operationId: removeCartproduct
       tags: ["cart"]
@@ -841,11 +773,11 @@ definitions:
     type: array
     items:
       required:
-        - productId
+        - _id
         - quantity
         - unitPrice
       properties:
-        productId:
+        _id:
           type: string
         quantity:
           type: integer
